# latchy

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_dist  Makefile  NOTES.md  READEME.md  README.md  buildStatic.sh  build_dist.sh  jose.cmake  vcpkg.json
.github/workflows/: buildNative.yml
models/: CMakeLists.txt  latchyConfiguration.proto
src/: CMakeLists.txt  configuration.cpp  configuration.h  curl.cpp  curl.h  help.cpp  help.h  latchyMain.cpp  latchyMain.h  main.cpp
src/assets/: CMakeLists.txt  assetProvider.cpp  assetProvider.h  assetSource.h  assetSource_Clevis.cpp  assetSource_File.cpp  assets.cpp  assets.h
src/helpers/: CMakeLists.txt  b64.h  fileAccess.cpp  fileAccess.h  forkExec.cpp  forkExec.h  log.cpp  log.h  stringSplit.h
src/metaInfo/: CMakeLists.txt  containerInfo.cpp  containerInfo.h  machineInfo.cpp  machineInfo.h  metaInfo.cpp  metaInfo.h  processInfo.cpp  processInfo.h
